--- a/index.html
+++ b/index.html
@@ -2,9 +2,47 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>后台首页</title>
+    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
+    <script src="js/vue.js"></script>
+    <script src="js/index.js"></script>
 </head>
 <body>
-hello
+    <div id="app">
+        <el-row tag="header">
+            <el-col :span="4" class="logo">
+                <img src="image/pic.gif" width="100" height="50"/>
+            </el-col>
+            <el-col :span="16">&nbsp;</el-col>
+            <el-col :span="4" class="user">
+                <div>
+                    <span>石浩浩</span>
+                    <img src="image/pic.gif" width="50" height="50"/>
+                </div>
+                <ul>
+                    <li>首页</li>
+                    <li>退出</li>
+                </ul>
+            </el-col>
+        </el-row>
+        <el-row>
+            <el-col :span="6" class="sidenav">
+                <ul>
+                    <li>
+                        <span>表格</span>
+                        <ul>
+                            <li>预览表格</li>
+                            <li>可操作表格</li>
+                            <li>动态表格</li>
+                        </ul>
+                    </li>
+                </ul>
+            </el-col>
+            <el-col :span="18"></el-col>
+        </el-row>
+    </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
