--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>后台首页</title>
     <link rel="stylesheet" href="css/base.css"/>
     <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/fonts/iconfont.css"/>
     <link rel="stylesheet" href="css/main.css"/>
     <script src="js/vue.js"></script>
     <script src="js/index.js"></script>
@@ -17,32 +18,127 @@
             </el-col>
             <el-col :span="16">&nbsp;</el-col>
             <el-col :span="4" class="user">
-                <div>
-                    <span>石浩浩</span>
-                    <img src="image/pic.gif" width="50" height="50"/>
+                <div class="message fl">
+                    <i class="icon iconfont icon-tongzhi"></i>
+                    <i class="num">12</i>
                 </div>
-                <ul>
-                    <li>首页</li>
-                    <li>退出</li>
-                </ul>
+                <div class="username fl">
+                    <img src="image/pic.gif" width="30" height="30"/><span>石浩浩</span>
+                    <i class="icon iconfont icon-arrowdown"></i>
+                    <ul class="usernav">
+                        <li>
+                            <i class="icon iconfont  icon-tongzhi"></i><a href="">首页</a>
+                        </li>
+                        <li>
+                            <i class="icon iconfont  icon-tongzhi"></i><a href="">退出</a>
+                        </li>
+                    </ul>
+                </div>
             </el-col>
         </el-row>
-        <el-row>
-            <el-col :span="6" class="sidenav">
+        <el-row class="content">
+            <el-col :span="3" tag="nav">
                 <ul>
                     <li>
-                        <span>表格</span>
-                        <ul>
-                            <li>预览表格</li>
-                            <li>可操作表格</li>
-                            <li>动态表格</li>
+                        <el-row class="current">
+                            <el-col :span="4" tag="i" class="icon iconfont icon-tongzhi"></el-col>
+                            <el-col :span="18" tag="span">表格</el-col>
+                            <el-col :span="2" tag="i" class="icon iconfont icon-arrowdown"></el-col>
+                        </el-row>
+                        <ul class="childnav">
+                            <li>
+                                <a href="">预览表格</a>
+                            </li>
+                            <li>
+                                <a href="">可操作表格</a>
+                            </li>
+                            <li>
+                                <a href="">动态表格</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <el-row>
+                            <el-col :span="4" tag="i" class="icon iconfont icon-tongzhi"></el-col>
+                            <el-col :span="18" tag="span">表单</el-col>
+                        </el-row>
+                    </li>
+                    <li>
+                        <el-row>
+                            <el-col :span="4" tag="i" class="icon iconfont icon-tongzhi"></el-col>
+                            <el-col :span="18" tag="span">表格</el-col>
+                            <el-col :span="2" tag="i" class="icon iconfont icon-arrowdown"></el-col>
+                        </el-row>
+                        <ul class="childnav">
+                            <li>
+                                <a href="">预览表格</a>
+                            </li>
+                            <li>
+                                <a href="">可操作表格</a>
+                            </li>
+                            <li>
+                                <a href="">动态表格</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <el-row>
+                            <el-col :span="4" tag="i" class="icon iconfont icon-tongzhi"></el-col>
+                            <el-col :span="18" tag="span">表格</el-col>
+                            <el-col :span="2" tag="i" class="icon iconfont icon-arrowdown"></el-col>
+                        </el-row>
+                        <ul class="childnav">
+                            <li>
+                                <a href="">预览表格</a>
+                            </li>
+                            <li>
+                                <a href="">可操作表格</a>
+                            </li>
+                            <li>
+                                <a href="">动态表格</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
             </el-col>
-            <el-col :span="18"></el-col>
+            <el-col :span="21" class="main">
+               <div class="block">
+                   <p class="tip"><span class="red">石浩浩</span>，Welcome to the background management! 今天是2017年07月24日。今日访问 <span class="red">5</span> 次</p>
+                   <div class="shortcut">
+                       <p>快捷访问</p>
+                       <ul class="shortcuticon clearfix">
+                           <li>
+                               <a href="">
+                                   <i class="icon iconfont icon-editor"></i>
+                                   <span>写文章</span>
+                               </a>
+                           </li>
+                           <li>
+                               <a href="">
+                                   <i class="icon iconfont icon-editor"></i>
+                                   <span>动态表格</span>
+                               </a>
+                           </li>
+                           <li>
+                               <a href="">
+                                   <i class="icon iconfont icon-editor"></i>
+                                   <span>写文章</span>
+                               </a>
+                           </li>
+                       </ul>
+                   </div>
+               </div>
+                <div class="block">
+                    <h6>
+                        <span>流量统计</span>
+                        <i>&times;</i>
+                    </h6>
+                    <div id="quota"></div>
+                </div>
+            </el-col>
         </el-row>
     </div>
     <script src="js/app.js"></script>
+    <script src="js/echarts.common.min.js"></script>
 </body>
 </html>
