--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/fonts/iconfont.css"/>
     <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/theme.css"/>
     <script src="js/vue.js"></script>
     <script src="js/index.js"></script>
 </head>
 <body>
-    <div id="app">
+    <div id="app" :class="themes+'-theme'">
         <el-row tag="header">
             <el-col :span="4" class="logo">
                 <img src="image/pic.gif" width="100" height="50"/>
@@ -23,8 +24,10 @@
                     <i class="num">12</i>
                 </div>
                 <div class="username fl">
-                    <img src="image/pic.gif" width="30" height="30"/><span>石浩浩</span>
-                    <i class="icon iconfont icon-arrowdown"></i>
+                    <div>
+                        <img src="image/pic.gif" width="30" height="30"/><span>石浩浩</span>
+                        <i class="icon iconfont icon-arrowdown"></i>
+                    </div>
                     <ul class="usernav">
                         <li>
                             <i class="icon iconfont  icon-tongzhi"></i><a href="">首页</a>
@@ -38,64 +41,16 @@
         </el-row>
         <el-row class="content">
             <el-col :span="3" tag="nav">
-                <ul>
+                <ul v-for="(item,index) in navlist">
                     <li>
-                        <el-row class="current">
-                            <el-col :span="4" tag="i" class="icon iconfont icon-tongzhi"></el-col>
-                            <el-col :span="18" tag="span">表格</el-col>
+                        <el-row @click.native="showNav(index)" :class="item.current ? 'current':''">
+                            <el-col :span="4" tag="i" class="icon iconfont" :class="item.icon"></el-col>
+                            <el-col :span="18" tag="span">{{item.nav}}</el-col>
                             <el-col :span="2" tag="i" class="icon iconfont icon-arrowdown"></el-col>
                         </el-row>
-                        <ul class="childnav">
-                            <li>
-                                <a href="">预览表格</a>
-                            </li>
-                            <li>
-                                <a href="">可操作表格</a>
-                            </li>
-                            <li>
-                                <a href="">动态表格</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <el-row>
-                            <el-col :span="4" tag="i" class="icon iconfont icon-tongzhi"></el-col>
-                            <el-col :span="18" tag="span">表单</el-col>
-                        </el-row>
-                    </li>
-                    <li>
-                        <el-row>
-                            <el-col :span="4" tag="i" class="icon iconfont icon-tongzhi"></el-col>
-                            <el-col :span="18" tag="span">表格</el-col>
-                            <el-col :span="2" tag="i" class="icon iconfont icon-arrowdown"></el-col>
-                        </el-row>
-                        <ul class="childnav">
-                            <li>
-                                <a href="">预览表格</a>
-                            </li>
-                            <li>
-                                <a href="">可操作表格</a>
-                            </li>
-                            <li>
-                                <a href="">动态表格</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <el-row>
-                            <el-col :span="4" tag="i" class="icon iconfont icon-tongzhi"></el-col>
-                            <el-col :span="18" tag="span">表格</el-col>
-                            <el-col :span="2" tag="i" class="icon iconfont icon-arrowdown"></el-col>
-                        </el-row>
-                        <ul class="childnav">
-                            <li>
-                                <a href="">预览表格</a>
-                            </li>
-                            <li>
-                                <a href="">可操作表格</a>
-                            </li>
-                            <li>
-                                <a href="">动态表格</a>
+                        <ul class="childnav" v-show="item.current">
+                            <li v-for="child in item.child">
+                                <a :href="'components/'+child.parmas+'.html'">{{child.childnav}}</a>
                             </li>
                         </ul>
                     </li>
@@ -104,42 +59,53 @@
             <el-col :span="21" class="main">
                <div class="block">
                    <p class="tip"><span class="red">石浩浩</span>，Welcome to the background management! 今天是2017年07月24日。今日访问 <span class="red">5</span> 次</p>
-                   <div class="shortcut">
-                       <p>快捷访问</p>
-                       <ul class="shortcuticon clearfix">
-                           <li>
-                               <a href="">
-                                   <i class="icon iconfont icon-editor"></i>
-                                   <span>写文章</span>
-                               </a>
-                           </li>
-                           <li>
-                               <a href="">
-                                   <i class="icon iconfont icon-editor"></i>
-                                   <span>动态表格</span>
-                               </a>
-                           </li>
-                           <li>
-                               <a href="">
-                                   <i class="icon iconfont icon-editor"></i>
-                                   <span>写文章</span>
-                               </a>
-                           </li>
-                       </ul>
+                   <div class="clearfix">
+                       <div class="shortcut fl">
+                           <h5>快捷访问</h5>
+                           <ul class="shortcuticon clearfix">
+                               <li>
+                                   <a href="">
+                                       <i class="icon iconfont icon-editor"></i>
+                                       <span>写文章</span>
+                                   </a>
+                               </li>
+                               <li>
+                                   <a href="">
+                                       <i class="icon iconfont icon-editor"></i>
+                                       <span>动态表格</span>
+                                   </a>
+                               </li>
+                               <li>
+                                   <a href="">
+                                       <i class="icon iconfont icon-editor"></i>
+                                       <span>写文章</span>
+                                   </a>
+                               </li>
+                           </ul>
+                       </div>
+                       <div class="theme fl">
+                           <h5>切换主题</h5>
+                           <div class="themebtn">
+                               <my-btn :mesg="['grey','black','blue']" @themes="getTheme
+                               "></my-btn>
+                           </div>
+                       </div>
                    </div>
                </div>
                 <div class="block">
                     <h6>
                         <span>流量统计</span>
-                        <i>&times;</i>
+                        <i v-toclose.native>&times;</i>
                     </h6>
                     <div id="quota"></div>
                 </div>
             </el-col>
         </el-row>
     </div>
-    <script src="js/app.js"></script>
-
+    <script src="js/axios.min.js"></script>
     <script src="js/echarts.common.min.js"></script>
+    <script src="js/directive.js"></script>
+    <script src="js/components.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
